--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -152,7 +152,7 @@
 	@media (--screen-lg) {
 		border-bottom: none;
 		border-right: solid 1px var(--color-gray-light);
-		width: 30%;
+		width: 335px;
 		height: 100vh;
 		transform: translateX(-100px) scale(0.9) perspective(400px) rotateY(15deg);
 
@@ -163,6 +163,7 @@
 
 		& .logo {
 			padding: 64px;
+			max-height: 180px;
 
 			& svg {
 				max-width: 100%;
@@ -179,12 +180,8 @@
 			opacity: 1;
 			transform: none;
 			pointer-events: all;
-			height: calc(100vh - 262px);
+			height: calc(100vh - 240px);
 		}
-	}
-
-	@media (--screen-xl) {
-		width: 20%;
 	}
 
 	& .burger {
